--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +14,10 @@
 
     <!-- ✅ Load SoundCloud SDK -->
     <script src="https://connect.soundcloud.com/sdk.js"></script>
+
+    <!-- ✅ Load Firebase Config (Fixes previous issues) -->
+    <script src="/firebaseConfig.js"></script>
+
 </head>
 
 <body>
@@ -28,10 +33,10 @@
         <input type="email" id="email" placeholder="Enter Email">
         <input type="password" id="password" placeholder="Enter Password">
         <div class="button-group">
-            <button id="signupBtn" onclick="signupUser()">Sign Up</button>
-            <button id="loginBtn" onclick="loginUser()">Login</button>
-            <button id="logoutBtn" onclick="logoutUser()" style="display:none;">Logout</button>
-            <button id="soundcloudLoginBtn" onclick="loginWithSoundCloud()">🔊 Login with SoundCloud</button>
+            <button id="signupBtn">Sign Up</button>
+            <button id="loginBtn">Login</button>
+            <button id="logoutBtn" style="display:none;">Logout</button>
+            <button id="soundcloudLoginBtn">🔊 Login with SoundCloud</button>
         </div>
         <p id="authMessage"></p>
     </div>
@@ -48,7 +53,7 @@
     <div class="container" id="soundcloudSection">
         <h2>Submit Your SoundCloud Track</h2>
         <input type="text" id="soundcloudUrl" placeholder="Enter SoundCloud URL">
-        <button id="submitTrackBtn" onclick="submitTrack()">Submit</button>
+        <button id="submitTrackBtn">Submit</button>
         <p id="currentTrackMessage">No active campaign</p>
     </div>
 
@@ -64,11 +69,19 @@
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
 
-    <!-- ✅ Load Firebase Config (IMPORTANT: Load Before auth.js) -->
-    <script src="/firebaseConfig.js"></script>
-
     <!-- ✅ Load Authentication Script AFTER Firebase is initialized -->
     <script src="auth.js"></script>
+
+    <!-- ✅ Add Event Listeners to Buttons to Fix Undefined Function Errors -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.getElementById("signupBtn").addEventListener("click", signupUser);
+            document.getElementById("loginBtn").addEventListener("click", loginUser);
+            document.getElementById("logoutBtn").addEventListener("click", logoutUser);
+            document.getElementById("submitTrackBtn").addEventListener("click", submitTrack);
+            document.getElementById("soundcloudLoginBtn").addEventListener("click", loginWithSoundCloud);
+        });
+    </script>
 
 </body>
 </html>
