--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,13 @@
     <title>TrackRepost - Boost Your Music Reach</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- ✅ Load Firebase -->
+    <!-- ✅ Load Firebase (Ensure these are correct versions) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+    <!-- ✅ Load SoundCloud Widget API -->
+    <script src="https://w.soundcloud.com/player/api.js"></script>
 
     <!-- ✅ Load Firebase Config FIRST -->
     <script src="firebaseConfig.js" defer></script>
@@ -41,7 +45,7 @@
     <!-- ✅ User Dashboard -->
     <div class="container" id="userDashboard">
         <h2>Your Dashboard</h2>
-        <p id="userCredits">🔍 Loading user data...</p>
+        <p>🔍 Loading user data...</p>
     </div>
 
     <!-- ✅ SoundCloud Authentication Section -->
@@ -65,6 +69,13 @@
         </div>
     </div>
 
+    <!-- ✅ SoundCloud Comment Section -->
+    <div class="container" id="commentSection">
+        <h2>💬 Leave a Comment on SoundCloud</h2>
+        <textarea id="commentText" placeholder="Write your comment here..."></textarea>
+        <button id="postCommentBtn">Post Comment & Earn 2 Credits</button>
+    </div>
+
     <footer>
         <p>© 2025 TrackRepost. All Rights Reserved.</p>
     </footer>
@@ -81,22 +92,23 @@
             }
 
             // ✅ Attach Event Listeners for Buttons
-            function attachEvent(id, func) {
+            const attachEvent = (id, func) => {
                 const btn = document.getElementById(id);
                 if (btn && typeof window[func] === "function") {
                     btn.addEventListener("click", window[func]);
                 } else {
                     console.error(`🚨 Function '${func}' is missing or '${id}' button not found!`);
                 }
-            }
+            };
 
             attachEvent("signupBtn", "signupUser");
             attachEvent("loginBtn", "loginUser");
             attachEvent("logoutBtn", "logoutUser");
             attachEvent("submitTrackBtn", "submitTrack");
             attachEvent("soundcloudLoginBtn", "loginWithSoundCloud");
+            attachEvent("postCommentBtn", "postComment");
 
-            // ✅ Load Active Campaigns
+            // ✅ Ensure Active Campaigns Load Once Firebase is Ready
             if (typeof loadActiveCampaigns === "function") {
                 loadActiveCampaigns();
             } else {
