--- a/public/credits.html
+++ b/public/credits.html
@@ -1,34 +1,37 @@
-<!DOCTYPE html>
+
+        <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy Credits - TrackRepost</title>
+    <title>Your Credits - TrackRepost</title>
     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
 
+    <!-- ✅ Load Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+    <!-- ✅ Load Firebase Config -->
+    <script src="firebaseConfig.js" defer></script>
+
+    <!-- ✅ Load Credits Script -->
+    <script src="credits.js" defer></script>
+</head>
+
+<body>
     <header>
-        <h1>💰 Buy Credits</h1>
-        <p>Purchase credits to boost your music!</p>
-        <a href="index.html">⬅ Back to Dashboard</a>
+        <h1>💰 Your Credits</h1>
     </header>
 
-    <div id="credit-buttons-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px;">
-        <!-- Button 1 (500 Credits) -->
-        <div class="credit-card">
-            <p>500 Credits</p>
-            <p class="price">$24.99</p>
-            <a target="_blank" href="https://square.link/u/i99mOWKT?src=embed" class="buy-button">Buy Now</a>
-        </div>
+    <div class="container">
+        <h2>Current Balance:</h2>
+        <p id="creditBalance">Loading...</p>
+    </div>
 
-        <!-- Button 2 (1000 Credits) -->
-        <div class="credit-card">
-            <p>1000 Credits</p>
-            <p class="price">$34.99</p>
-            <a target="_blank" href="https://square.link/u/WVdzubsu?src=embed" class="buy-button">Buy Now</a>
-        </div>
-
-        <!-- Button 3 (2500 Credits) -->
-        <div class="credit-card">
-           
+    <footer>
+        <p>© 2025 TrackRepost. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
+   
